--- a/view/index.html
+++ b/view/index.html
@@ -32,22 +32,18 @@
     <!-- The navigation menu will get the value of the "active" variable as a class.
          The $event.preventDefault() stops the page from jumping when a link is clicked. -->
 
-    <nav class="{{active}}" ng-click="$event.preventDefault()">
+    <!--<nav class="{{active}}" ng-click="$event.preventDefault()">-->
 
+    <nav class="{{active}}">
         <!-- When a link in the menu is clicked, we set the active variable -->
 
-        <a href="#" class="home" ng-click="active='home'">Home</a>
-        <a href="#" class="about " ng-click="active='about'">About</a>
-        <a href="#" class="ministries" ng-click="active='ministries'">Ministries</a>
-        <a href="#" class="contact" ng-click="active='contact'">Contact</a>
+        <a href="#home" class="home" ng-click="active='home'">Home</a>
+        <a href="#about" class="about " ng-click="active='about'">About</a>
+        <a href="#ministries" class="ministries" ng-click="active='ministries'">Ministries</a>
+        <a href="#contact" class="contact" ng-click="active='contact'">Contact</a>
     </nav>
 
-    <!-- ng-show will show an element if the value in the quotes is truthful,
-         while ng-hide does the opposite. Because the active variable is not set
-         initially, this will cause the first paragraph to be visible. -->
-
-    <p ng-hide="active">Please click a menu item</p>
-    <p ng-show="active">You chose <b>{{active}}</b></p>
+    <div ng-view></div>
 </div>
 
 </body>
