--- a/view/template/about.html
+++ b/view/template/about.html
@@ -1,5 +1,29 @@
 <div>
-    <h1>About Page</h1>
-
-    <p>{{ message }}</p>
+    <div>
+        <p style="text-align: right">About Us</p>
+    </div>
+    <div style="text-align: justify">
+        <p>
+            The church of Christ, as in the Bible, reached the Lewisham area in 1994. In line with the aim of our Lord
+            and Saviour Jesus Christ, it is for people who hunger and thirst for righteousness to meet together and serve
+            God as described for the Christian Age in the Holy Bible.
+        </p>
+        <p>
+            The Good News is when our Lord rose from the dead on the third day, He said that,
+            "Repentance for the forgiveness of sins should be proclaimed in His name to all the nations,
+            beginning from Jerusalem." His disciples in Lewisham are made up of different nationalities who are
+            rejoicing because their names are recorded in heaven through obedience of the Good News. Please come and see.
+        </p>
+        <p>
+            The Biblical term "Church of Christ" is used to describe exactly who we are and who we belong to, namely Christ.
+            This Divine name was first used by the Saviour Himself, when He said, "Upon this rock I will build my Church",
+            Matthew 16:18 & Romans 16:16. Our aim is to follow the Divine instructions of our Lord, and to make disciples
+            of every nation.
+        </p>
+        <p>
+            If for any reason you visit the south east of London, there are great tourist attractions on our door step.
+            There are many places you may visit such as Greenwich park, the area where the Olympics will be held and where
+            time was first measured. Every one is warmly welcome.
+        </p>
+    </div>
 </div>
