--- a/view/template/contact.html
+++ b/view/template/contact.html
@@ -1,5 +1,11 @@
 <div>
-    <h1>Contact Page</h1>
-
-    <p>{{ message }}</p>
+    <div>
+        <p style="text-align: right">
+            We are here
+        </p>
+    </div>
+    <div>
+        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d621.3232453415965!2d-0.028855470785451757!3d51.47113493411288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876025f3e830817%3A0x592ddcceacba384!2s22+Lucas+St%2C+London+SE8+4QG!5e0!3m2!1sen!2suk!4v1473449094069" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d621.3232453415965!2d-0.028855470785451757!3d51.47113493411288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876025f3e830817%3A0x592ddcceacba384!2s22+Lucas+St%2C+London+SE8+4QG!5e0!3m2!1sen!2suk!4v1473449094069" width="990" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 </div>
