--- a/view/index.html
+++ b/view/index.html
@@ -11,6 +11,18 @@
 
     <title>Lewisham Church of christ</title>
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <!-- Bootstrap Core CSS -->
     <link href="/lewishamchurchofchrist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -29,21 +41,25 @@
 <body>
 <!-- Adding the ng-app declaration to initialize AngularJS -->
 <div id="main" ng-app="app" ng-controller="appController">
-    <!-- The navigation menu will get the value of the "active" variable as a class.
-         The $event.preventDefault() stops the page from jumping when a link is clicked. -->
 
-    <!--<nav class="{{active}}" ng-click="$event.preventDefault()">-->
+<div id="mydiv">
+    <div id="menu-div">
+        <nav class="{{active}}" id="grad1" style="margin-bottom: 0px">
+            <!-- When a link in the menu is clicked, we set the active variable -->
 
-    <nav class="{{active}}">
-        <!-- When a link in the menu is clicked, we set the active variable -->
-
-        <a href="#home" class="home" ng-click="active='home'">Home</a>
-        <a href="#about" class="about " ng-click="active='about'">About</a>
-        <a href="#ministries" class="ministries" ng-click="active='ministries'">Ministries</a>
-        <a href="#contact" class="contact" ng-click="active='contact'">Contact</a>
-    </nav>
-
-    <div ng-view></div>
+            <a href="#home" class="home" ng-click="active='home'">Home</a>
+            <a href="#about" class="about " ng-click="active='about'">About</a>
+            <a href="#ministries" class="ministries" ng-click="active='ministries'">Ministries</a>
+            <a href="#contact" class="contact" ng-click="active='contact'">Contact</a>
+        </nav>
+    </div>
+    <div>
+        <img src="/lewishamchurchofchrist//img/old_banner.jpg" style="width: 990px;height: 199px">
+    </div>
+    <div>
+        <div ng-view></div>
+    </div>
+</div>
 </div>
 
 </body>
