--- a/view/template/home.html
+++ b/view/template/home.html
@@ -1,12 +1,12 @@
 <div>
     <div style="text-align: justify">
-        <div style="width: 100%">
-            <p style="text-align: right"><label>Welcome to the Lewisham church of christ</label></p>
+        <div style="text-align: right">
+            <p style="text-align: right"><label><h4>Welcome to the Lewisham church of christ</h4></label></p>
         </div>
 
-        <div>
+        <div style="text-align:center">
             <p style="text-align: center; font-family: sans-serif">
-                SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.
+                <h3>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h3>
             </p>
         </div>
         <div>
