--- a/view/index.html
+++ b/view/index.html
@@ -3,6 +3,7 @@
 
 <head>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
@@ -18,10 +19,6 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <!-- Bootstrap Core CSS -->
     <link href="/lewishamchurchofchrist/css/bootstrap.min.css" rel="stylesheet">
@@ -40,28 +37,81 @@
 
 <body>
 <!-- Adding the ng-app declaration to initialize AngularJS -->
-<div id="main" ng-app="app" ng-controller="appController">
+<div id="main" ng-app="app" ng-controller="appController"  class="container-fluid">
 
-<div id="mydiv">
-    <div id="menu-div">
-        <nav class="{{active}}" id="grad1" style="margin-bottom: 0px">
-            <!-- When a link in the menu is clicked, we set the active variable -->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="navBar">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"  style="color: #ffffff"><label>Lewisham Church of christ</label></a>
+            </div>
+            <div class="navbar-collapse collapse">
 
-            <a href="#home" class="home" ng-click="active='home'">Home</a>
-            <a href="#about" class="about " ng-click="active='about'">About</a>
-            <a href="#ministries" class="ministries" ng-click="active='ministries'">Ministries</a>
-            <a href="#contact" class="contact" ng-click="active='contact'">Contact</a>
-        </nav>
+                <!-- Left nav -->
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#home" class="home" ng-click="active='home'">Home</a></li>
+                    <li><a href="#about" class="about " ng-click="active='about'">About</a></li>
+                    <li><a href="#ministries" class="ministries" ng-click="active='ministries'">Ministries</a></li>
+                    <li><a href="#contact" class="contact" ng-click="active='contact'">Contact</a></li>
+                    <li><a href="#">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Nav header</li>
+                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">One more separated link <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">A long sub menu <span class="caret"></span></a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="#">Action</a></li>
+                                            <li><a href="#">Something else here</a></li>
+                                            <li class="disabled"><a class="disabled" href="#">Disabled item</a></li>
+                                            <li><a href="#">One more link</a></li>
+                                            <li><a href="#">Menu item 1</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Another link</a></li>
+                                    <li><a href="#">One more link</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+
+            </div><!--/.nav-collapse -->
     </div>
-    <div>
-        <img src="/lewishamchurchofchrist//img/old_banner.jpg" style="width: 990px;height: 199px">
+    <div class="row">
+        <div class="col-sm-1"></div>
+        <div  id="pageLayout" class="col-sm-10" ng-view></div>
+        <div class="col-sm-1"></div>
     </div>
-    <div>
-        <div ng-view></div>
-    </div>
-</div>
 </div>
 
 </body>
+
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+<!-- SmartMenus jQuery plugin -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/jquery.smartmenus.js"></script>
+
+<!-- SmartMenus jQuery Bootstrap Addon -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/addons/bootstrap/jquery.smartmenus.bootstrap.js"></script>
+
+
+<script>
+    $("#navBar a").on("click", function(){
+        $("#navBar").find(".active").removeClass("active");
+        $(this).parent().addClass("active");
+    });
+</script>
 
 </html>
