--- a/view/template/ministries.html
+++ b/view/template/ministries.html
@@ -2,4 +2,9 @@
     <h1>Ministries Page</h1>
 
     <p>{{ message }}</p>
+
+    <div>
+        <p>Name: </p><input type="text" ng-model="name" value="Gugu"/>
+        <p>Hello <span ng-bind = "name"></span>!</p>
+    </div>
 </div>
