--- a/view/template/home.html
+++ b/view/template/home.html
@@ -1,37 +1,117 @@
-<div>
-    <div style="text-align: justify">
-        <div style="text-align: right">
-            <p style="text-align: right"><label><h4>Welcome to the Lewisham church of christ</h4></label></p>
-        </div>
+<div id="view-layout">
 
-        <div style="text-align:center">
-            <p style="text-align: center; font-family: sans-serif">
-                <h3>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h3>
-            </p>
-        </div>
-        <div>
-            <p class=normal>
-                We are a warm group of Christians who are striving to worship God in the same way that the first century
-                Christians did.
-            </p>
-            <p>
-                In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21). The church
-                of Christ has congregations throughout the United Kingdom and all over the world. However we have no
-                central organization on earth, but we have a common cause: to be the Church as it was when first
-                instituted
-                by the Lord Jesus Christ.
-            </p>
-            <p>
-                More over the Bible teaches us that our practices and teachings must be by the authority of our Lord
-                Jesus
-                Christ. Whatever you do, whether in word or in deed, do it all in the name of the Lord Jesus, giving
-                thanks
-                to God the Father through him (Colossians 3v17)..
-            </p>
-            <p>
-                Psalms 1: 1 Blessed is the man who walks not in the counsel of the ungodly, Nor stands in the path of
-                sinners, Nor sits in the seat of the scornful..
-            </p>
-        </div>
-    </div>
+    <table>
+        <col width="70%">
+        <col width="30%">
+        <tr>
+            <td>
+                <!-- Carousel
+   ================================================== -->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" style="background-size: contain" role="listbox">
+                        <div class="item active">
+                            <img class="first-slide img-responsive" src="/lewishamchurchofchrist/img/bible-Sunlight_a.jpg" alt="Slide 1" style="height: 350px; width: 900px">
+                            <div class="container">
+                                <div class="carousel-caption">
+                                    <h1>John 14:16</h1>
+                                    <p>Jesus answered, "I am the way and the truth and the life. No one comes to the Father except through me.</p>
+                                    <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>-->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img class="second-slide" src="http://www.womenoffaith.com/wp-content/uploads/2015/02/bible-Sunlight.jpg" alt="Slide 1" style="height: 350px; width: 900px" >
+                            <div class="container">
+                                <div class="carousel-caption">
+                                    <h1>Another example headline.</h1>
+                                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                    <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>-->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img class="third-slide" src="http://www.womenoffaith.com/wp-content/uploads/2015/02/bible-Sunlight.jpg" alt="Slide 1" style="height: 350px; width: 900px">
+                            <div class="container">
+                                <div class="carousel-caption">
+                                    <h1>One more for good measure.</h1>
+                                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                    <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>-->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="left carousel-control" data-target="#myCarousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" data-target="#myCarousel" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div><!-- /.carousel -->
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="#" class="worshipButton"><label style="color: #101010; font-weight: 100">Looking for a christian home?</label><br><label>Worship <br> With <br> Us</label></a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#" class="worshipButton"><label style="color: #101010; font-weight: 100">Want to learn about the bible?</label><br><label>Learn <br> With <br> Us</label></a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#" class="worshipButton"><label style="color: #101010; font-weight: 100">Want to get involved?</label><br><label>Serve <br> With <br> Us</label></a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
+
+    <!--<div style="text-align: justify">-->
+        <!--&lt;!&ndash;<div style="text-align: right">&ndash;&gt;-->
+            <!--&lt;!&ndash;<p style="text-align: right"><label><h4>Welcome to the Lewisham church of christ</h4></label></p>&ndash;&gt;-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+        <!--<div style="text-align:center">-->
+            <!--<p style="text-align: center; font-family: sans-serif">-->
+                <!--<h3>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h3>-->
+            <!--</p>-->
+        <!--</div>-->
+        <!--<div>-->
+            <!--<p class=normal>-->
+                <!--We are a warm group of Christians who are striving to worship God in the same way that the first century-->
+                <!--Christians did.-->
+            <!--</p>-->
+            <!--<p>-->
+                <!--In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21). The church-->
+                <!--of Christ has congregations throughout the United Kingdom and all over the world. However we have no-->
+                <!--central organization on earth, but we have a common cause: to be the Church as it was when first-->
+                <!--instituted-->
+                <!--by the Lord Jesus Christ.-->
+            <!--</p>-->
+            <!--<p>-->
+                <!--More over the Bible teaches us that our practices and teachings must be by the authority of our Lord-->
+                <!--Jesus-->
+                <!--Christ. Whatever you do, whether in word or in deed, do it all in the name of the Lord Jesus, giving-->
+                <!--thanks-->
+                <!--to God the Father through him (Colossians 3v17)..-->
+            <!--</p>-->
+            <!--<p>-->
+                <!--Psalms 1: 1 Blessed is the man who walks not in the counsel of the ungodly, Nor stands in the path of-->
+                <!--sinners, Nor sits in the seat of the scornful..-->
+            <!--</p>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
