--- a/view/index.html
+++ b/view/index.html
@@ -25,6 +25,7 @@
 
     <!-- Custom CSS -->
     <link href="/lewishamchurchofchrist/css/simple-sidebar.css" rel="stylesheet">
+    <link href="/lewishamchurchofchrist/css/carousel.css" rel="stylesheet">
 
 
     <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
@@ -95,8 +96,13 @@
     </div>
 </div>
 
-</body>
+<!-- FOOTER -->
+<footer>
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2016 LCOC. &reg;
+</footer>
 
+<!--Scripts-->
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
@@ -113,5 +119,5 @@
         $(this).parent().addClass("active");
     });
 </script>
-
+</body>
 </html>
