--- a/view/template/home.html
+++ b/view/template/home.html
@@ -16,7 +16,7 @@
                     </ol>
                     <div class="carousel-inner" style="background-size: contain" role="listbox">
                         <div class="item active">
-                            <img class="first-slide img-responsive" src="/lewishamchurchofchrist/img/bible-Sunlight_a.jpg" alt="Slide 1" style="height: 350px; width: 900px">
+                            <img class="first-slide img-responsive" src="/lewishamchurchofchrist/img/bible-Sunlight_a.jpg" alt="Slide 1" style="height: 100%; width: 100%">
                             <div class="container">
                                 <div class="carousel-caption">
                                     <h1>John 14:16</h1>
@@ -26,7 +26,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img class="second-slide" src="http://www.womenoffaith.com/wp-content/uploads/2015/02/bible-Sunlight.jpg" alt="Slide 1" style="height: 350px; width: 900px" >
+                            <img class="second-slide" src="http://www.womenoffaith.com/wp-content/uploads/2015/02/bible-Sunlight.jpg" alt="Slide 1" style="height: 100%; width: 100%" >
                             <div class="container">
                                 <div class="carousel-caption">
                                     <h1>Another example headline.</h1>
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img class="third-slide" src="http://www.womenoffaith.com/wp-content/uploads/2015/02/bible-Sunlight.jpg" alt="Slide 1" style="height: 350px; width: 900px">
+                            <img class="third-slide" src="http://www.womenoffaith.com/wp-content/uploads/2015/02/bible-Sunlight.jpg" alt="Slide 1" style="height: 100%; width: 100%">
                             <div class="container">
                                 <div class="carousel-caption">
                                     <h1>One more for good measure.</h1>
