--- a/view/template/home.html
+++ b/view/template/home.html
@@ -53,17 +53,21 @@
                 </a>
             </div><!-- /.carousel -->
         </div>
-        <div class="col-sm-2">
-            <div>
+        <div class="col-sm-4">
+            <div style="display:inline-block; margin:.2em 0 .9em 0;">
                 <a href="#" class="worshipButton"><label style="color: #101010; font-weight: 100">Looking for a christian home?</label><br><label>Worship <br> With <br> Us</label></a>
             </div>
-            <div>
+            <div style="display:inline-block; margin:.2em 0 .9em 0;">
                 <a href="#" class="worshipButton"><label style="color: #101010; font-weight: 100">Want to learn about the bible?</label><br><label>Learn <br> With <br> Us</label></a>
             </div>
-            <div>
+            <div style="display:inline-block; margin:.2em 0 0 0;">
                 <a href="#" class="worshipButton"><label style="color: #101010; font-weight: 100">Want to get involved?</label><br><label>Serve <br> With <br> Us</label></a>
             </div>
         </div>
+    </div>
+
+    <div class="row">
+        <!-- Todo New items to go here-->
     </div>
 
     <!--<div style="text-align: justify">-->
