--- a/view/template/home.html
+++ b/view/template/home.html
@@ -68,41 +68,71 @@
 
     <div class="row">
         <!-- Todo New items to go here-->
+        <div style="text-align:center">
+            <p style="text-align: center; font-family: sans-serif">
+            <h3>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h3>
+            </p>
+        </div>
+        <div>
+            <p class=normal>
+                We are a warm group of Christians who are striving to worship God in the same way that the first century
+                Christians did.
+            </p>
+            <p>
+                In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21). The church
+                of Christ has congregations throughout the United Kingdom and all over the world. However we have no
+                central organization on earth, but we have a common cause: to be the Church as it was when first
+                instituted
+                by the Lord Jesus Christ.
+            </p>
+            <p>
+                More over the Bible teaches us that our practices and teachings must be by the authority of our Lord
+                Jesus
+                Christ. Whatever you do, whether in word or in deed, do it all in the name of the Lord Jesus, giving
+                thanks
+                to God the Father through him (Colossians 3v17)..
+            </p>
+            <p>
+                Psalms 1: 1 Blessed is the man who walks not in the counsel of the ungodly, Nor stands in the path of
+                sinners, Nor sits in the seat of the scornful..
+            </p>
+        </div>
     </div>
+</div>
 
-    <!--<div style="text-align: justify">-->
-    <!--&lt;!&ndash;<div style="text-align: right">&ndash;&gt;-->
-    <!--&lt;!&ndash;<p style="text-align: right"><label><h4>Welcome to the Lewisham church of christ</h4></label></p>&ndash;&gt;-->
-    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--<div style="text-align: justify">-->
+<!--&lt;!&ndash;<div style="text-align: right">&ndash;&gt;-->
+<!--&lt;!&ndash;<p style="text-align: right"><label><h4>Welcome to the Lewisham church of christ</h4></label></p>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
 
-    <!--<div style="text-align:center">-->
-    <!--<p style="text-align: center; font-family: sans-serif">-->
-    <!--<h3>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h3>-->
-    <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-    <!--<p class=normal>-->
-    <!--We are a warm group of Christians who are striving to worship God in the same way that the first century-->
-    <!--Christians did.-->
-    <!--</p>-->
-    <!--<p>-->
-    <!--In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21). The church-->
-    <!--of Christ has congregations throughout the United Kingdom and all over the world. However we have no-->
-    <!--central organization on earth, but we have a common cause: to be the Church as it was when first-->
-    <!--instituted-->
-    <!--by the Lord Jesus Christ.-->
-    <!--</p>-->
-    <!--<p>-->
-    <!--More over the Bible teaches us that our practices and teachings must be by the authority of our Lord-->
-    <!--Jesus-->
-    <!--Christ. Whatever you do, whether in word or in deed, do it all in the name of the Lord Jesus, giving-->
-    <!--thanks-->
-    <!--to God the Father through him (Colossians 3v17)..-->
-    <!--</p>-->
-    <!--<p>-->
-    <!--Psalms 1: 1 Blessed is the man who walks not in the counsel of the ungodly, Nor stands in the path of-->
-    <!--sinners, Nor sits in the seat of the scornful..-->
-    <!--</p>-->
-    <!--</div>-->
-    <!--</div>-->
+<!--<div style="text-align:center">-->
+<!--<p style="text-align: center; font-family: sans-serif">-->
+<!--<h3>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h3>-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<p class=normal>-->
+<!--We are a warm group of Christians who are striving to worship God in the same way that the first century-->
+<!--Christians did.-->
+<!--</p>-->
+<!--<p>-->
+<!--In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21). The church-->
+<!--of Christ has congregations throughout the United Kingdom and all over the world. However we have no-->
+<!--central organization on earth, but we have a common cause: to be the Church as it was when first-->
+<!--instituted-->
+<!--by the Lord Jesus Christ.-->
+<!--</p>-->
+<!--<p>-->
+<!--More over the Bible teaches us that our practices and teachings must be by the authority of our Lord-->
+<!--Jesus-->
+<!--Christ. Whatever you do, whether in word or in deed, do it all in the name of the Lord Jesus, giving-->
+<!--thanks-->
+<!--to God the Father through him (Colossians 3v17)..-->
+<!--</p>-->
+<!--<p>-->
+<!--Psalms 1: 1 Blessed is the man who walks not in the counsel of the ungodly, Nor stands in the path of-->
+<!--sinners, Nor sits in the seat of the scornful..-->
+<!--</p>-->
+<!--</div>-->
+<!--</div>-->
 </div>
