--- a/view/template/home.html
+++ b/view/template/home.html
@@ -1,57 +1,18 @@
 <div id="view-layout">
 
     <div class="row">
-        <div  id="" class="col-sm-8">
-            <!-- Carousel
-  ================================================== -->
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner" style="background-size: contain" role="listbox">
-                    <div class="item active">
-                        <img class="first-slide img-responsive" src="/lewishamchurchofchrist/img/bible-Sunlight_a.jpg" alt="Slide 1" style="height: 100%; width: 100%">
-                        <div class="container">
-                            <div class="carousel-caption">
-                                <h1>John 14:16</h1>
-                                <p>Jesus answered, "I am the way and the truth and the life. No one comes to the Father except through me.</p>
-                                <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>-->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img class="second-slide" src="http://www.womenoffaith.com/wp-content/uploads/2015/02/bible-Sunlight.jpg" alt="Slide 1" style="height: 100%; width: 100%" >
-                        <div class="container">
-                            <div class="carousel-caption">
-                                <h1>Another example headline.</h1>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>-->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img class="third-slide" src="http://www.womenoffaith.com/wp-content/uploads/2015/02/bible-Sunlight.jpg" alt="Slide 1" style="height: 100%; width: 100%">
-                        <div class="container">
-                            <div class="carousel-caption">
-                                <h1>One more for good measure.</h1>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>-->
-                            </div>
+        <div class="col-sm-8">
+            <div style="height: 305px">
+                <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
+                    <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
+                        <img ng-src="{{slide.image}}" style="margin:auto;">
+                        <div class="carousel-caption">
+                            <h1>{{slide.title}}</h1>
+                            <p>{{slide.text}}</p>
                         </div>
                     </div>
                 </div>
-                <a class="left carousel-control" data-target="#myCarousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" data-target="#myCarousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div><!-- /.carousel -->
+            </div>
         </div>
         <div class="col-sm-4">
             <p>
@@ -104,8 +65,8 @@
         <div class="col-sm-4">
 
         </div>
-
     </div>
+
 </div>
 
 <!--<div style="text-align: justify">-->
