--- a/view/template/home.html
+++ b/view/template/home.html
@@ -1,15 +1,13 @@
 <div id="view-layout">
 
-    <div class="row">
+    <div class="row" style="text-align: center">
         <div class="col-sm-8">
-            <div style="height: 305px">
-                <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
-                    <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
-                        <img ng-src="{{slide.image}}" style="margin:auto;">
-                        <div class="carousel-caption">
-                            <h1>{{slide.title}}</h1>
-                            <p>{{slide.text}}</p>
-                        </div>
+            <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
+                <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
+                    <img ng-src="{{slide.image}}" style="margin:auto;">
+                    <div class="carousel-caption">
+                        <h1>{{slide.title}}</h1>
+                        <p>{{slide.text}}</p>
                     </div>
                 </div>
             </div>
@@ -22,86 +20,46 @@
                 <a href="#" class="worshipButton"><label style="color: #101010; font-weight: 100">Want to learn about the bible?</label><br><label>Learn <br> With <br> Us</label></a>
             </p>
             <p>
-                <a href="#" class="worshipButton"><label style="color: #101010; font-weight: 100">Want to get involved?</label><br><label>Serve <br> With <br> Us</label></a>
+                <a href="#" class="worshipButton"><label style="color: #101010; font-weight: 100">Want to get involved with us?</label><br><label>Serve <br> With <br> Us</label></a>
             </p>
         </div>
     </div>
 
-    <div style="text-align:left">
-        <p style="text-align: left; font-family: sans-serif">
-        <h3>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h3>
-        </p>
-    </div>
-    <div class="row vertical-line">
+    <div class="row">
 
         <div  id="" class="col-sm-8">
-
-
             <div>
-                <p class=normal>
+
+                <p class="normal">
+                <h3>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h3>
+                </p>
+                <p class=normal class="normal">
                     We are a warm group of Christians who are striving to worship God in the same way that the first century
                     Christians did.
                 </p>
-                <p>
-                    In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21). The church
-                    of Christ has congregations throughout the United Kingdom and all over the world. However we have no
-                    central organization on earth, but we have a common cause: to be the Church as it was when first
-                    instituted
-                    by the Lord Jesus Christ.
+                <p class="normal">
+                    In this way we are striving to continue the divine unity that Jesus prayed for in John 17:21.<br>
+                    The church of Christ has congregations throughout the United Kingdom and all over the world.<br>
+                    However we have no central organization on earth, but we have a common cause: to be the Church as
+                    it was when first instituted by the Lord Jesus Christ.
                 </p>
-                <p>
+                <p class="normal">
                     More over the Bible teaches us that our practices and teachings must be by the authority of our Lord
-                    Jesus
-                    Christ. Whatever you do, whether in word or in deed, do it all in the name of the Lord Jesus, giving
-                    thanks
+                    Jesus Christ.<br>
+                    Whatever you do, whether in word or in deed, do it all in the name of the Lord Jesus, giving thanks
                     to God the Father through him (Colossians 3v17)..
                 </p>
-                <p>
+                <p class="normal">
                     Psalms 1: 1 Blessed is the man who walks not in the counsel of the ungodly, Nor stands in the path of
                     sinners, Nor sits in the seat of the scornful..
                 </p>
             </div>
         </div>
         <div class="col-sm-4">
-
+            <br>
+            <p><strong>We are here</strong></p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d621.3232453415965!2d-0.028855470785451757!3d51.47113493411288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876025f3e830817%3A0x592ddcceacba384!2s22+Lucas+St%2C+London+SE8+4QG!5e0!3m2!1sen!2suk!4v1473449094069" width="250" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </div>
-
 </div>
-
-<!--<div style="text-align: justify">-->
-<!--&lt;!&ndash;<div style="text-align: right">&ndash;&gt;-->
-<!--&lt;!&ndash;<p style="text-align: right"><label><h4>Welcome to the Lewisham church of christ</h4></label></p>&ndash;&gt;-->
-<!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-<!--<div style="text-align:center">-->
-<!--<p style="text-align: center; font-family: sans-serif">-->
-<!--<h3>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h3>-->
-<!--</p>-->
-<!--</div>-->
-<!--<div>-->
-<!--<p class=normal>-->
-<!--We are a warm group of Christians who are striving to worship God in the same way that the first century-->
-<!--Christians did.-->
-<!--</p>-->
-<!--<p>-->
-<!--In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21). The church-->
-<!--of Christ has congregations throughout the United Kingdom and all over the world. However we have no-->
-<!--central organization on earth, but we have a common cause: to be the Church as it was when first-->
-<!--instituted-->
-<!--by the Lord Jesus Christ.-->
-<!--</p>-->
-<!--<p>-->
-<!--More over the Bible teaches us that our practices and teachings must be by the authority of our Lord-->
-<!--Jesus-->
-<!--Christ. Whatever you do, whether in word or in deed, do it all in the name of the Lord Jesus, giving-->
-<!--thanks-->
-<!--to God the Father through him (Colossians 3v17)..-->
-<!--</p>-->
-<!--<p>-->
-<!--Psalms 1: 1 Blessed is the man who walks not in the counsel of the ungodly, Nor stands in the path of-->
-<!--sinners, Nor sits in the seat of the scornful..-->
-<!--</p>-->
-<!--</div>-->
-<!--</div>-->
 </div>
