--- a/view/index.html
+++ b/view/index.html
@@ -35,6 +35,8 @@
 
 </head>
 
+<!--new comment-->
+
 <body>
 <!-- Adding the ng-app declaration to initialize AngularJS -->
 <div id="main" ng-app="app" ng-controller="appController"  class="container-fluid">
