--- a/view/template/home.html
+++ b/view/template/home.html
@@ -4,7 +4,7 @@
         <div class="col-sm-8">
             <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
                 <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
-                    <img ng-src="{{slide.image}}" class="img-responsive" style="height: 350px; width: 1000px">
+                    <img ng-src="{{slide.image}}" class="img-responsive" style="height: 350px; width: 100%">
                     <div class="carousel-caption">
                         <h1>{{slide.title}}</h1>
                         <p>{{slide.text}}</p>
