updated home view

--- a/view/index.html
+++ b/view/index.html
@@ -28,8 +28,8 @@
     <link href="/lewishamchurchofchrist/css/carousel.css" rel="stylesheet">
 
 
-    <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+    <script src = "//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src = "//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
     <script type="text/javascript" src="/lewishamchurchofchrist/js/app.js"></script>
     <![endif]-->
 
@@ -53,10 +53,10 @@
 
                 <!-- Left nav -->
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#home" class="home" ng-click="active='home'">Home</a></li>
-                    <li><a href="#about" class="about " ng-click="active='about'">About</a></li>
-                    <li><a href="#ministries" class="ministries" ng-click="active='ministries'">Ministries</a></li>
-                    <li><a href="#contact" class="contact" ng-click="active='contact'">Contact</a></li>
+                    <li class="active"><a href="#home" class="home" ng-click="active='home'"><strong>Home</strong></strong></a></li>
+                    <li><a href="#about" class="about " ng-click="active='about'"><strong>About</strong></a></li>
+                    <li><a href="#ministries" class="ministries" ng-click="active='ministries'"><strong>Ministries</strong></a></li>
+                    <li><a href="#contact" class="contact" ng-click="active='contact'"><strong>Contact</strong></a></li>
                     <li><a href="#">Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Action</a></li>
@@ -102,8 +102,8 @@
 </footer>
 
 <!--Scripts-->
-<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!-- SmartMenus jQuery plugin -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/jquery.smartmenus.js"></script>
