--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -93,7 +93,7 @@ td {
 }
 
 h3 {
-    font-family: quote, sans-serif;
+    font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
 }
 
 .normal {
@@ -117,7 +117,7 @@ label .button-label{
 /*fonts*/
 @font-face {
     font-family: quote;
-    src: url('/lewishamchurchofchrist/fonts/Belle_Script.otf');
+    src: url('../../lewisham/fonts/Belle_Script.otf');
 }
 
 /*Buttons*/
