Added package manager (bower)

--- a/view/index.html
+++ b/view/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Lewisham Church of christ</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -10,27 +11,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Lewisham Church of christ</title>
-
-    <!-- Latest compiled and minified CSS -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Custom CSS -->
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link href="/lewishamchurchofchrist/css/simple-sidebar.css" rel="stylesheet">
     <link href="/lewishamchurchofchrist/css/carousel.css" rel="stylesheet">
 
-
-    <script src = "//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src = "//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+    <script src = "../bower_components/angular/angular.min.js"></script>
+    <script src = "../bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="/lewishamchurchofchrist/js/app.js"></script>
+    <script type="text/javascript" src="/lewishamchurchofchrist/js/churchAppController.js"></script>
+    <script type="text/javascript" src="/lewishamchurchofchrist/js/route-provider.js"></script>
     <![endif]-->
 
 </head>
@@ -102,31 +92,16 @@
 </footer>
 
 <!--Scripts-->
-<script
-        src="//code.jquery.com/jquery-1.11.3.min.js">
-</script>
-<script
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous">
-</script>
+<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <!-- SmartMenus jQuery plugin -->
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/jquery.smartmenus.js">
-</script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/jquery.smartmenus.js"></script>
 
 <!-- SmartMenus jQuery Bootstrap Addon -->
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/addons/bootstrap/jquery.smartmenus.bootstrap.js">
-</script>
-<script
-        src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.1.4.js">
-</script>
-<script
-        src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.js">
-</script>
-
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/addons/bootstrap/jquery.smartmenus.bootstrap.js"></script>
+<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.1.4.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.js"></script>
 
 <script>
     $("#navBar a").on("click", function(){
