--- a/view/index.html
+++ b/view/index.html
@@ -94,14 +94,12 @@
 <!--Scripts-->
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
 <!-- SmartMenus jQuery plugin -->
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/jquery.smartmenus.js"></script>
-
+<script src="../bower_components/smartmenus/dist/jquery.smartmenus.js"></script>
 <!-- SmartMenus jQuery Bootstrap Addon -->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/addons/bootstrap/jquery.smartmenus.bootstrap.js"></script>
 <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.1.4.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.js"></script>
+<script src="../bower_components/angular-animate/angular-animate.js"></script>
 
 <script>
     $("#navBar a").on("click", function(){
